--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
+<!--This file has been made with the assistance of ChatGPT-4-->
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COMP 4537 Lab 5 - Group 5</title>
   <link rel="stylesheet" href="./index.css">
 </head>
+
 <body>
 
-<button type="button" onclick="post()">INSERT</button>
-<button type="button" onclick="query()">QUERY</button>
+  <button type="button" onclick="post()">INSERT</button>
+  <button type="button" onclick="query()">QUERY</button>
 
-<textarea name="text" id="sqlQuery" cols="30" rows="10"></textarea>
+  <textarea name="text" id="sqlQuery" cols="30" rows="10"></textarea>
 
-<div id="demo">
-  Waiting for responses
-</div>
+  <div id="demo">
+    Waiting for responses
+  </div>
 
-<div id="table">
-  No table yet
-</div>
-<script src="./index.js"></script>
+  <div id="table">
+    No table yet
+  </div>
+  <script src="./index.js"></script>
 </body>
+
 </html>
